// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberField NumberField normal 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="false"
      className="textField base enabled normal medium truncate"
      disabled={false}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      type="number"
    />
  </div>
</span>
`;

exports[`NumberField NumberField with autocomplete 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="false"
      autoComplete="on"
      className="textField base enabled normal medium truncate"
      disabled={false}
      id="test"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      type="number"
    />
  </div>
</span>
`;

exports[`NumberField NumberField with enterKeyHint 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="false"
      className="textField base enabled normal medium truncate"
      disabled={false}
      enterKeyHint="go"
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      type="number"
    />
  </div>
</span>
`;

exports[`NumberField NumberField with error 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="true"
      className="textField base enabled errored medium truncate"
      disabled={false}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      type="number"
    />
  </div>
  <div
    className="box marginTop2"
  >
    <div
      className="Text fontSize100 errorText alignStart breakWord fontWeightNormal"
    >
      <span
        className="formErrorMessage"
        id="test-error"
      >
        <div
          className="box"
          role="alert"
        >
          <div
            className="Flex rowGap2 columnGap2 xsDirectionRow"
          >
            <div
              className="FlexItem"
            >
              <div
                className="Flex rowGap0 columnGap0 xsDirectionColumn"
              >
                <div
                  className="Flex rowGap2 columnGap0 itemsCenter xsDirectionRow"
                >
                  <div
                    className="FlexItem"
                  >
                    <svg
                      aria-hidden={true}
                      aria-label=""
                      className="icon errorIcon iconBlock"
                      height={16}
                      role="img"
                      viewBox="0 0 24 24"
                      width={16}
                    >
                      <path
                        d="test-file-stub"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="FlexItem"
            >
              error message
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</span>
`;

exports[`NumberField NumberField with name 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="false"
      className="textField base enabled normal medium truncate"
      disabled={false}
      id="test"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      type="number"
    />
  </div>
</span>
`;
